Limpieza general de código